# Codex-Pipeline-Triage

./: .gitignore  ADR-0001-runtime-stack.md  ADR-0002-codex-sdk-fallback.md  AGENTS.md  DEMO-SCRIPT.md  DEMO-STATE.md  DEMO-TALK-TRACK.md  Makefile  README.md  SPEC.md  SPIKES.md  START-PROMPTS.md  pyproject.toml
codex_pipeline_triage/: __init__.py  app.py  auth.py  codex_adapter.py  context.py  gitlab.py  models.py  persistence.py  projects.py  reporting.py  webhooks.py
docs/: CODEX-PYTHON-SDK.md
scripts/: probe_codex_python_sdk.py  prove_persistence.py  run_codex_adapter_on_context.py  run_fix_mr_manual_gate.py  run_retry_manual_gate.py
tests/codex_pipeline_triage/: __init__.py  helpers.py  test_app.py  test_auth.py  test_codex_adapter.py  test_context.py  test_gitlab.py  test_persistence.py  test_projects.py  test_reporting.py  test_webhooks.py
tests/codex_pipeline_triage/fixtures/: pipeline_failed.json  pipeline_failed_branch.json  pipeline_failed_child.json  pipeline_failed_mr.json  pipeline_failed_tag.json  pipeline_failed_unknown.json
